Nâng cấp giao diện FlatLaf, Strategy Pattern tiền xử lý và hoàn thiện lỗi nhận diện